--- a/deployment.yml
+++ b/deployment.yml
@@ -2,19 +2,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Finance Me
+  name: Finance-Me
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: Finance Me
+      app: Finance-Me
   template:
     metadata:
       labels:
-        app: Finance Me
+        app: Finance-Me
     spec:
       containers:
-        - name: Finance Me
+        - name: Finance-Me
           image: nmenakshy199/banking-project:latest
           ports:
             - containerPort: 8081
@@ -25,11 +25,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: Finance Me
+  name: Finance-Me
 spec:
   type: NodePort
   ports:
     - port: 8081
       targetPort: 8081
   selector:
-    app: Finance Me
+    app: Finance-Me
